# onCallServerless

./: .env  Cargo.toml  package-lock.json  package.json  serverless.yml  test.json
create_open_schedule/src/: lambda_gateway.rs  main.rs
create_schedule/: Cargo.toml
create_schedule/src/: lambda_gateway.rs  main.rs
db/: Cargo.toml  Cargo.toml~
get_schedule/: Cargo.toml
models/: Cargo.toml
models/src/: call.rs  db.rs  lib.rs  range.rs  schedule.rs  time.rs  users.rs
receive_call/: Cargo.toml
receive_call/src/: main.rs
receive_message/: Cargo.toml
receive_message/src/: main.rs
resources/: cognito_user_pool.yml  dynamodb-table.yml
test_lambda/: Cargo.toml
test_lambda/src/: main.rs
test_route/: Cargo.toml
