[package]
name = "receive_call"
version = "0.1.0"
authors = ["val500 <varun.valada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.112", features = ["derive"] }
serde_derive = "1.0.112"
serde_json = "1.0.55"
lambda_runtime = "0.2.1"
models = { path = "../models" }
rusoto_core = { version = "0.44" } 
rusoto_dynamodb= { version = "0.44"}
rusoto_sqs = { version = "0.44.0" }
dynomite = "0.8.2"
chrono = { version = "0.4", features = ["serde"] }
lambda_http = { version = "0.1.1" }
log = "0.4.8"
simple_logger = "1.6.0"
serde_urlencoded = "0.5.1"
twilio-async = "0.4.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "0.2", features = ["rt-core", "macros"] }
futures = { version = "0.3.5" }
